--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@sojs_coder/db": "^1.5.7",
+    "bad-words": "^3.0.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "crypto-js": "^4.0.0",
@@ -20,7 +21,9 @@
     "firebase-admin": "^9.4.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "swig": "^1.4.2"
+    "showdown": "^1.9.1",
+    "swig": "^1.4.2",
+    "xss-filters": "^1.2.7"
   },
   "devDependencies": {},
   "repository": {
